code-gen/templates/customer-hub/base/ping-cloud/pingaccess-was/engine/remove-pingfederate-admin-ingress.yaml
# Remove PingFederate Admin ingress
apiVersion: networking.k8s.io
kind: Ingress
metadata:
 name: pingfederate-admin-ingress
$patch: delete
