code-gen/templates/customer-hub/base/ping-cloud/pingaccess-was/engine/remove-unneeded-ingresses.yaml
# Remove PingFederate Admin ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: pingfederate-admin-ingress-via-was
$patch: delete
---
# Remove PingAccess Admin ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: pingaccess-admin-ingress
$patch: delete
---
# Remove Healthcheck ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: healthcheck-httpbin-ingress
$patch: delete
---
# Remove Logs ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: logs-ingress
$patch: delete
---
# Remove Prometheus ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: prometheus-ingress
$patch: delete
---
# Remove Monitoring ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: monitoring-ingress
$patch: delete
---
